<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/colordarkgrey"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colormainren">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/tendp"
            android:src="@mipmap/ico_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/changepasswordtitle"
            android:textColor="@color/colorwite"
            android:textSize="@dimen/fifteensp" />

        <TextView
            android:id="@+id/txt_over"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/overname"
            android:textColor="@color/colorwite" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorwite"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/fifteendp"
            android:paddingLeft="@dimen/tendp"
            android:paddingTop="@dimen/fifteendp"
            android:text="@string/nowpassword"/>
        <EditText
            android:id="@+id/edt_nowpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:password="true" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/onedp"
        android:background="@color/colorwite"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/fifteendp"
            android:paddingLeft="@dimen/tendp"
            android:paddingTop="@dimen/fifteendp"
            android:text="@string/newpassword"/>
        <EditText
            android:id="@+id/edt_newpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorwite"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/fifteendp"
            android:paddingLeft="@dimen/tendp"
            android:paddingTop="@dimen/fifteendp"
            android:text="@string/verify"/>
        <EditText
            android:id="@+id/edt_verifypassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tendp"
            android:inputType="textPassword" />
    </LinearLayout>
</LinearLayout>