<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorwite"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/ry_shopcartitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colormainren">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingBottom="@dimen/tendp"
            android:paddingTop="@dimen/tendp"
            android:text="@string/shopcattitle"
            android:textColor="@color/colorwite"
            android:textSize="@dimen/fifteensp" />

        <TextView
            android:id="@+id/txt_compile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/tendp"
            android:layout_marginEnd="@dimen/tendp"
            android:paddingTop="@dimen/tendp"
            android:text="@string/compile"
            android:textColor="@color/colorwite" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/ry_shopcarbottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/buttonstyle">

        <TextView
            android:id="@+id/txt_allpictitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/tendp"
            android:layout_marginStart="@dimen/tendp"
            android:text="@string/total" />

        <TextView
            android:id="@+id/txt_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/txt_allpictitle"
            android:layout_toEndOf="@id/txt_allpictitle"
            android:textColor="@color/colormainren" />


        <Button
            android:id="@+id/btn_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@color/colormainren"
            android:text="@string/topay"
            android:textColor="@color/colorwite" />

    </RelativeLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ry_shopcarbottom"
        android:layout_below="@id/ry_shopcartitle"
        android:scrollbars="vertical">

        <ListView
            android:id="@+id/slv_shopcar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>

    </android.support.v4.widget.SwipeRefreshLayout>


    <TextView
        android:id="@+id/txt_shopcartmessag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/shopcartnull"
        android:textColor="@color/colordarkgrey"
        android:textSize="@dimen/twentysp"
        android:visibility="gone" />


</RelativeLayout>