<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fiftydp"
        android:background="@color/colormainren">
        <TextView
            android:id="@+id/txt_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/tendp"
            android:layout_marginTop="@dimen/fifteendp"
           android:textColor="@color/colorwite"
            android:textSize="@dimen/fifteendp"
            android:text="@string/searchname"/>
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifteendp"
            android:layout_marginLeft="@dimen/tendp"
            android:src="@mipmap/ico_back"/>
        <EditText
            android:id="@+id/edi_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/tendp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/tendp"
            android:drawableLeft="@mipmap/search"
            android:paddingLeft="@dimen/tendp"
            android:background="@drawable/searchshape"
            android:textSize="13sp"
            android:layout_toRightOf="@id/img_back"
            android:layout_toLeftOf="@+id/txt_search"
            android:hint="搜索你喜欢的商品"
            style="@style/Widget.AppCompat.EditText" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ico_hot"
        android:layout_marginLeft="@dimen/tendp"
        android:layout_marginTop="@dimen/tendp"
        android:drawablePadding="@dimen/tendp"
        android:text="@string/topsearch"
        />
    <GridView
        android:id="@+id/gridview_hot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="5">


    </GridView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/icon_history"
        android:layout_marginTop="@dimen/tendp"
        android:layout_marginLeft="@dimen/tendp"
        android:drawablePadding="@dimen/tendp"
        android:text="@string/searchhistory"/>
    <GridView
        android:id="@+id/gridview_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="5">


    </GridView>

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fortydp"
        android:text="@string/emptythesearch"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/twenty_fivedp"
        android:layout_marginRight="@dimen/twenty_fivedp"
        android:background="@color/colorwite"/>


</LinearLayout>