<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colormainren">
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/tendp"
            android:src="@mipmap/ico_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registered"
            android:textColor="@color/colorwite"
            android:textSize="@dimen/fifteensp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/tendp"
       >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fifteendp"
            android:paddingTop="@dimen/fifteendp"
            android:src="@mipmap/ico_account"
          />
        <EditText
            android:id="@+id/edt_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phonenumber"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tendp"
        >
        <ImageView
            android:id="@+id/img_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fifteendp"
            android:paddingTop="@dimen/fifteendp"
            android:src="@mipmap/ico_message"
            />
        <TextView
            android:id="@+id/txt_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/fivedp"
            android:background="@drawable/codeborder"
            android:layout_marginRight="@dimen/fivedp"
            android:text="获取验证码"/>
        <EditText
            android:id="@+id/edt_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_message"
            android:layout_toLeftOf="@id/txt_code"
            android:hint="请输入短信验证码"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/tendp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fifteendp"
            android:paddingTop="@dimen/fifteendp"
            android:src="@mipmap/ico_password"
            />
        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/inputpassword"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/tendp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fifteendp"
            android:paddingTop="@dimen/fifteendp"
            android:src="@mipmap/ico_password"
            />
        <EditText
            android:id="@+id/edt_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/verify"/>
    </LinearLayout>


    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorwite"
        android:layout_marginTop="@dimen/fortydp"
        android:layout_marginLeft="@dimen/tendp"
        android:layout_marginRight="@dimen/tendp"
        android:background="@drawable/redandpaleredselecto"
        android:text="@string/instantreregister"/>


</LinearLayout>